b46: Fix comment_content styles to better stretch underneath floated
comment_info head when starting with a code block and
fix a comment_info typo style.

--- a/templates/b46/style.css
+++ b/templates/b46/style.css
@@ -767,7 +767,7 @@ pre {
   padding: 0 9px 4px 9px;
   padding: 0 .5rem .222222rem .5rem;
   float: right;
-  margin-right: -.5erm; }
+  margin-right: -.5rem; }
   .comment.odd .comment_info.plainList,
   .comments_for_entry .comment.even .comment_info.plainList {
     background-color: #eee; }
@@ -799,7 +799,7 @@ article.post li .pc-owner {
   color: #222;
   text-shadow: 0px 1px #6c6b6d; }
   .comment_content {
-    padding: .5rem 0; }
+    padding: .6rem 0; }
   .comment_content pre:first-child {
     margin-top: 1.5rem; }
   .comment_content .alert {
